add 3-custom-hibernate-homework exercise (completed)

--- a/3-custom-hibernate-homework/pom.xml
+++ b/3-custom-hibernate-homework/pom.xml
@@ -24,5 +24,12 @@
             <version>1.18.34</version>
         </dependency>
 
+        <!-- I have added postgreSQL JDBC Driver to communicate with PostgreSQL Database-->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.3</version>
+        </dependency>
+
     </dependencies>
 </project>
